--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <article class="box">
-            <h1>Your Name</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <h1>Rofeehah Rosheed</h1>
+            <div><a href="mailto:your.email@example.com">rofeehaholaitanrosheed@gmail.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,7 +21,7 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
+                    <li><a href="https://github.com/<handle>">@Labake25</a></li>
                     <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
                     <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
                 </ul>    
@@ -31,7 +31,7 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        University of Lagos
                     </h2>
                     <h3>Major</h3>
                     <ul>
@@ -63,8 +63,8 @@
                 </h2>
                 <h3>Microsoft Learn Student Ambassador</h3>
                 <ul>
-                    <li>Some skill</li>
-                    <li>Another skill</li>
+                    <li>Communication</li>
+                    <li>Team work</li>
                 </ul>
             </section>
             <section class="box">
